# pascal_voc_tools

./: LICENSE  MANIFEST.in  README.md  compile_push.sh  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: pythonpackage.yml
docs/docs/source/: pascal_voc_tools.rst  (+1 more)
docs/source/: conf.py  index.rst  modules.rst  pascal_voc_tools.Augmenter.rst  pascal_voc_tools.Evaluater.rst  pascal_voc_tools.rst  pascal_voc_tools.utils.rst
pascal_voc_tools/: .xmlreader.py.swp  __init__.py  _data_stream.py  _dataset_tools.py  _format.py  _object_detection_result_saver.py  _pad_data.py  _pad_data.py   _pascalvoc2cocojson.py  _version.py  _xml_parser.py  anchors_kmeans.py  annotation_tools.py  annotations_tools.py  crop.py  darknet_config.py  datasetresize.py  datasplit.py  datatools.py  false_positive_argument.py  file.py  format.py  generator.py  image_annotation_split.py  image_tools.py  image_utils.py  images_tools.py  iou.py  jpegimages_tools.py  pascal_generator.py  resize.py  result_analyse.py  show_comp_result.py  tools.py  voc_label.py  voc_tools.py  xmlReader.py  xml_tools.py  xmlreader.py  xmlwriter.py
pascal_voc_tools/Augmenter/: __init__.py  bbox_util.py  data_aug.py
pascal_voc_tools/Evaluater/: __init__.py  cocoeval.py  tools.py
pascal_voc_tools/templates/: annotation.xml
pascal_voc_tools/tests/: test_file.py
pascal_voc_tools/utils/: __init__.py  _coordinate.py  _prefix_grouping.py  _split_name_list.py  cython_nms.c  nms.py
test/: test_file.py  test_format.py
tests/: test.py  test_tools.py  test_voc_tools.py  test_xml_tools.py
(+4 files in other folders)
