[metadata]
name = pascal_voc_tools
author = ternence wang
author-email = ternencewang2015@outlook.com
summary = Some PascalVOC dataset tools
license = MIT
description-file = README.md
home-page = https://github.com/wang-tf/pascal_voc_tools
requires-python = >=3.0
classifier = 
    Intended Audience :: Developers
    Intended Audience :: Machine Learning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

