[metadata]
name = pascal_voc_tools
author = ternence wang
author-email = ternencewang2015@outlook.com
summary = Some PascalVOC dataset tools
license = MIT
description-file = README.md
home-page = https://github.com/wang-tf/pascal_voc_tools
requires-python = >=3.0
classifier = 
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
warning-is-error = 1

[pbr]
skip_authors = 1
skip_changelog = 1
